Sat May  8 2004  Joe Allen <jhallen@world.std.com>
	* usearch.c :

	Fixed bug in tab completion in text windows.
	Change tab completion key to ^K <return>

Fri May  7 22:37:49 EDT 2004
	* usearch.c :

	Tab completion at search prompt.

	ESC-Tab completes within text windows.

Fri May  7 16:02:21 EDT 2004
	* usearch.c, uisrch.c :

	Added case insensitive by default option.

Fri May  7 2004  Joe Allen <jhallen@world.std.com>
	* main.c, menu.c, pw.c, qw.c, rc.c, tab.c :

	joe a b c, now windows are in order a, b, c.

	TAB completion now works on last path in prompt window:
	for example '!ls foo', tab will complete the foo.

	Added menu_explorer option.  When set: menu stays up when
	a directory is seleted.  When clear: directory is added
	to path and menu is closed.

	Menus are now 40% of window size (or smaller if they are
	not filled).

	Cursor is now position after selected menu entry.

Thu May  6 2004  Joe Allen <jhallen@world.std.com>
	* umenu.c :

	TAB key now cycles through menu entries.  This is useful
	for tab completion: just keep hitting tab until you see the
	file you want, then hit enter.

	TAB completion is more "bash"-like: if you complete a directory
	name a menu does not appear, the directory just gets added to the
	prompt.

Thu May  6 2004  Joe Allen <jhallen@world.std.com>
	* ublock.c :

	Added "select" function for Ctrl-arrow selecting.
	Ctrl-space drops anchor and sets marking mode.

Thu May  6 2004  Joe Allen <jhallen@world.std.com>
	* uerror.c :

	Improve error parser: require ':' on error lines.
	Make macro 'compile' for error parsing.
	'compile' macro always uses same buffer.
	^X ` in jmacs goes to next error.

Thu May  6 2004  Joe Allen <jhallen@world.std.com>
	* uedit.c :

	Smart tab looks back 10 lines to determine indentation.

Wed May  5 2004  Joe Allen <jhallen@world.std.com>
	* charmap.c :

	Now parses charmap files.

Wed May  5 2004  Joe Allen <jhallen@world.std.com>
 	* bw.c charmap.c main.c qw.c qw.h regex.c regex.h 